# logopaedie-report-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  dev.sh  reports.db  vercel.json
backend/: database.py  dependencies.py  exceptions.py  logging_config.py  main.py  pyproject.toml  redis_client.py  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/middleware/: auth.py  rate_limiter.py  service_token.py
backend/models/: auth.py  patient.py  report_record.py  schemas.py  soap_record.py  therapy_plan_record.py
backend/routers/: analysis.py  auth.py  auth_admin.py  exports.py  health.py  legacy.py  patients.py  reports.py  sessions.py  soap.py  suggestions.py  therapy_plans.py
backend/services/: anamnesis_catalog.py  anamnesis_engine.py  audit_service.py  auth_service.py  challenge_store.py  demo_quota.py  email_service.py  encryption_service.py  file_processor.py  groq_client.py  password_service.py  patient_service.py  pdf_generator.py  phonological_analyzer.py  report_comparator.py  report_generator.py  session_store.py  soap_generator.py  text_suggester.py  therapy_planner.py  token_service.py  totp_service.py
backend/tests/: conftest.py  helpers.py  test_2fa_routes.py  test_admin_routes.py  test_alembic_migrations.py  test_anamnesis_engine.py  test_anamnesis_flow.py  test_audit_service.py  test_auth_middleware.py  test_auth_models.py  test_auth_routes.py  test_auth_service.py  test_challenge_store.py  test_clinical_grounding.py  test_compare.py  test_demo_quota.py  test_email_service.py  test_encryption_service.py  test_env_hygiene.py  test_exports.py  test_file_processor.py  test_generate_gating.py  test_groq_client.py  test_health.py  test_legacy_routes.py  test_material_formatting.py  (+46 more)
(+255 files in other folders)
