[project]
name = "logopaedie-report-agent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135,<1",
  "uvicorn[standard]>=0.42,<1",
  "pydantic>=2.12,<3",
  "groq>=1.1,<2",
  "python-dotenv>=1.2,<2",
  "python-multipart>=0.0.22,<1",
  "PyPDF2>=3.0,<4",
  "python-docx>=1.2,<2",
  "upstash-redis>=1.7,<2",
  "sqlmodel>=0.0.37,<1",
  "psycopg2-binary>=2.9,<3",
  "slowapi>=0.1.9,<1",
  "cryptography>=46,<47",
  "reportlab>=4.4,<5",
  "alembic>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
